syntax = "proto3";
package comment.service.internal.conf;

import "google/protobuf/duration.proto";

option go_package = "github.com/toomanysource/atreus/app/comment/service/internal/conf;conf";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  JWT jwt = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Mysql {
    string driver = 1;
    string dsn = 2;
  }
  message Redis {
    int32 db = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  message Kafka {
    string addr = 1;
    string comment_topic = 2;
    int32 partition = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Mysql mysql = 1;
  Redis redis = 2;
  Kafka kafka = 3;
}

message JWT {
  message HTTP {
    string token_key = 1;
  }
  message GRPC {
    string token_key = 1;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}
